--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.10",
     "primeflex": "^3.3.1",
     "primevue": "^3.50.0",
     "vue": "^3.2.13"
